bluejay-validator/tests/snapshots/executable_integration_test__error@fragments_must_be_used.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/fragments_must_be_used.graphql
---
Error: Fragment definition `nameFragment` is unused
   ╭─[<unknown>:1:10]
   │
 1 │ fragment nameFragment on Dog { # unused
   │          ──────┬─────  
   │                ╰─────── Fragment definition is unused
───╯

